fix the quay.io pull

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -194,6 +194,7 @@ jobs:
           sudo rm -rf /etc/cni/net.d/11-crio-ipv4-bridge.conflist
           # this is where cri-o gets its storage defaults (that can be overriden in crio.conf.d/
           sudo cp ci/cached-builds/storage.conf /etc/containers/storage.conf
+          sudo cp ci/cached-builds/registries.conf /etc/containers/registries.conf
           
           sudo systemctl start crio.service
         env:
