--- a/ci/cached-builds/storage.conf
+++ b/ci/cached-builds/storage.conf
@@ -16,4 +16,5 @@ transient_store = true
 [storage.options.overlay]
 # We can use fuse-overlayfs to avoid the uid/gid-shift problems, and then reuse by root user works.
 mount_program = "/usr/bin/fuse-overlayfs"
-# force_mask = "0700"
+force_mask = "0700"
+mountopt="allow_other"
