--- a/ci/cached-builds/crio.conf
+++ b/ci/cached-builds/crio.conf
@@ -2,12 +2,7 @@
 
 [crio]
 storage_driver = "overlay"
-storage_option = [
-  "overlay.mount_program=/usr/bin/fuse-overlayfs",
-  "overlay.force_mask=0700",
-  "overlay.mountopt=allow_other"
-  #"overlay.mountopt=nodev,metacopy=on"
-]
+# storage_option = [ "overlay.mountopt=nodev,metacopy=on" ]
 
 # reuse podman's container storage because we have huge images that don't fit on disk twice
 root = "/home/runner/.local/share/containers/storage"
