fixup enable podman socket

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -114,7 +114,9 @@ jobs:
           cp ci/cached-builds/podman.service /etc/systemd/system/podman.service
           cp ci/cached-builds/podman.socket /etc/systemd/system/podman.socket
           sudo systemctl daemon-reload
-          sudo systemctl enable --now podman.socket
+          # no idea why it is masked
+          sudo systemctl unmask podman.socket
+          sudo systemctl start podman.socket
 
           # should at least reset storage when touching storage.conf
           podman system reset --force
