--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -112,6 +112,7 @@ jobs:
           # https://github.com/containers/podman/blob/main/docs/tutorials/socket_activation.md
           # since `brew services start podman` is buggy, let's do our own brew-compatible service
           # Regarding directory paths, see https://unix.stackexchange.com/questions/224992/where-do-i-put-my-systemd-unit-file
+          sudo mkdir -p /usr/local/lib/systemd/system/
           sudo cp ci/cached-builds/podman.service /usr/local/lib/systemd/system/podman.service
           sudo cp ci/cached-builds/podman.socket /usr/local/lib/systemd/system/podman.socket
           sudo systemctl daemon-reload
