--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -105,10 +105,14 @@ jobs:
         run: |
           set -Eeuxo pipefail
           
-          # this is also where cri-o gets its storage defaults (that can be overriden in crio.conf)
-          sudo cp ci/cached-builds/containers.conf /etc/containers/containers.conf
+          # podman from brew has its own /etc
+          # the (default) config location is also where cri-o gets its storage defaults (that can be overriden in crio.conf)
+          sudo cp ci/cached-builds/containers.conf /etc/containers.conf
+          sudo cp ci/cached-builds/containers.conf /home/linuxbrew/.linuxbrew/opt/podman/etc/containers.conf
           sudo cp ci/cached-builds/storage.conf /etc/containers/storage.conf
+          sudo cp ci/cached-builds/storage.conf /home/linuxbrew/.linuxbrew/opt/podman/etc/containers/storage.conf
           sudo cp ci/cached-builds/registries.conf /etc/containers/registries.conf
+          sudo cp ci/cached-builds/registries.conf /home/linuxbrew/.linuxbrew/opt/podman/etc/containers/registries.conf
 
           # should at least reset storage when touching storage.conf
           # Failed to obtain podman configuration: runroot must be set
