--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -276,5 +276,7 @@ jobs:
         run: python3 ci/cached-builds/make_test.py --target ${{ inputs.target }}
         env:
           IMAGE_TAG: "${{ steps.calculated_vars.outputs.IMAGE_TAG }}"
+          # for make deploy
+          NOTEBOOK_TAG: "${{ steps.calculated_vars.outputs.IMAGE_TAG }}"
       - run: df -h
         if: "${{ !cancelled() }}"
