--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -149,7 +149,6 @@ jobs:
       # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#push
       - name: "push|schedule: make ${{ inputs.target }}"
         run: |
-          
           make ${{ inputs.target }}
         if: ${{ fromJson(inputs.github).event_name == 'push' || fromJson(inputs.github).event_name == 'schedule' }}
         env:
@@ -276,8 +275,8 @@ jobs:
         run: python3 ci/cached-builds/make_test.py --target ${{ inputs.target }}
         env:
           IMAGE_TAG: "${{ steps.calculated_vars.outputs.IMAGE_TAG }}"
-          # for make deploy
-          NOTEBOOK_TAG: "${{ steps.calculated_vars.outputs.IMAGE_TAG }}"
+          # for make deploy, mandatory to specify for the more exotic cases
+          NOTEBOOK_TAG: "${{ inputs.target }}-${{ steps.calculated_vars.outputs.IMAGE_TAG }}"
 
       #        env:
 #          KIND_EXPERIMENTAL_PROVIDER: podman
@@ -399,6 +398,5 @@ jobs:
           name: "${{ inputs.target }}_playwright-report"
           path: tests/browser/playwright-report/
           retention-days: 30
-
       - run: df -h
         if: "${{ !cancelled() }}"
