bind-mount TMPDIR

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -106,6 +106,11 @@ jobs:
       - name: Configure Podman
         run: |
           set -Eeuxo pipefail
+          
+          # podman running as service ignores the TMPDIR env var here, let's give it a bind-mount to /var/tmp
+          sudo umount /var/tmp
+          mkdir -p $TMPDIR
+          sudo mount --bind -o rw,noexec,nosuid,nodev,bind $TMPDIR /var/tmp
 
           # podman from brew has its own /etc (was giving me Failed to obtain podman configuration: runroot must be set)
           # the (default) config location is also where cri-o gets its storage defaults (that can be overriden in crio.conf)
