--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -152,6 +152,10 @@ jobs:
 
           echo "IMAGE_TAG=${IMAGE_TAG}" >> "$GITHUB_OUTPUT"
 
+      #
+      # Image build
+      #
+
       # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#push
       - name: "push|schedule: make ${{ inputs.target }}"
         run: |
@@ -176,6 +180,10 @@ jobs:
 
       - name: "Show podman images information"
         run: podman images --digests
+
+      #
+      # Makefile image tests
+      #
 
       - name: "Check if we have tests or not"
         id: have-tests
@@ -284,81 +292,9 @@ jobs:
           # for make deploy, mandatory to specify for the more exotic cases
           NOTEBOOK_TAG: "${{ inputs.target }}-${{ steps.calculated_vars.outputs.IMAGE_TAG }}"
 
-      #        env:
-#          KIND_EXPERIMENTAL_PROVIDER: podman
       #
-      #      - name: "pull_request|schedule: resolve target if Trivy scan should run"
-#        id: resolve-target
-#        if: ${{ fromJson(inputs.github).event_name == 'pull_request' || fromJson(inputs.github).event_name == 'schedule' }}
-#        env:
-#          EVENT_NAME: ${{ fromJson(inputs.github).event_name }}
-#          HAS_TRIVY_LABEL: ${{ contains(fromJson(inputs.github).event.pull_request.labels.*.name, 'trivy-scan') }}
-#          FS_SCAN_FOLDER: ${{ fromJson(env.TRIVY_SCAN_FS_JSON)[inputs.target] }}
-#        run: |
-#          if [[ "$EVENT_NAME" == "pull_request" && "$HAS_TRIVY_LABEL" == "true" ]]; then
-#            if [[ -n "$FS_SCAN_FOLDER" ]]; then
-#              TARGET="$FS_SCAN_FOLDER"
-#              TYPE="fs"
-#            else
-#              TARGET="ghcr.io/${{ github.repository }}/workbench-images:${{ inputs.target }}-${{ github.sha }}"
-#              TYPE="image"
-#            fi
-#          elif [[ "$EVENT_NAME" == "schedule" ]]; then
-#            if [[ -n "$FS_SCAN_FOLDER" ]]; then
-#              TARGET="$FS_SCAN_FOLDER"
-#              TYPE="fs"
-#            else
-#              TARGET="ghcr.io/${{ github.repository }}/workbench-images:${{ inputs.target }}-${{ github.ref_name }}_${{ github.sha }}"
-#              TYPE="image"
-#            fi
-#          fi
-#
-#          if [[ -n "$TARGET" ]]; then
-#            echo "target=$TARGET" >> $GITHUB_OUTPUT
-#            echo "type=$TYPE" >> $GITHUB_OUTPUT
-#            echo "Trivy scan will run on $TARGET ($TYPE)"
-#          else
-#            echo "Trivy scan won't run"
-#          fi
-#
-#      - name: Run Trivy vulnerability scanner
-#        if: ${{ steps.resolve-target.outputs.target }}
-#        run: |
-#          TRIVY_VERSION=0.53.0
-#          REPORT_FOLDER=${{ github.workspace }}/report
-#          REPORT_FILE=trivy-report.md
-#          REPORT_TEMPLATE=trivy-markdown.tpl
-#
-#          mkdir -p $REPORT_FOLDER
-#          cp ci/$REPORT_TEMPLATE $REPORT_FOLDER
-#
-#          SCAN_TARGET=${{ steps.resolve-target.outputs.target }}
-#          SCAN_TYPE=${{ steps.resolve-target.outputs.type }}
-#          echo "Scanning $SCAN_TARGET ($SCAN_TYPE)"
-#
-#          if [[ "$SCAN_TYPE" == "image" ]]; then
-#            SCAN_ARGS="--image-src podman --podman-host /var/run/podman/podman.sock"
-#            PODMAN_ARGS="-v ${PODMAN_SOCK}:/var/run/podman/podman.sock"
-#          elif [[ "$SCAN_TYPE" == "fs" ]]; then
-#            WORKSPACE_FOLDER="/workspace"
-#            SCAN_TARGET="$WORKSPACE_FOLDER/$SCAN_TARGET"
-#            PODMAN_ARGS="-v ${{ github.workspace }}:$WORKSPACE_FOLDER"
-#          fi
-#
-#          # have trivy access podman socket,
-#          # https://github.com/aquasecurity/trivy/issues/580#issuecomment-666423279
-#          podman run --rm \
-#              $PODMAN_ARGS \
-#              -v ${REPORT_FOLDER}:/report \
-#              docker.io/aquasec/trivy:$TRIVY_VERSION \
-#                $SCAN_TYPE \
-#                $SCAN_ARGS \
-#                --scanners vuln --ignore-unfixed \
-#                --exit-code 0 --timeout 30m \
-#                --format template --template "@/report/$REPORT_TEMPLATE" -o /report/$REPORT_FILE \
-#                $SCAN_TARGET
-#
-#          cat $REPORT_FOLDER/$REPORT_FILE >> $GITHUB_STEP_SUMMARY
+      # Typescript (browser) image tests
+      #
 
       # https://playwright.dev/docs/ci
       # https://playwright.dev/docs/docker
@@ -404,6 +340,10 @@ jobs:
           name: "${{ inputs.target }}_playwright-report"
           path: tests/browser/playwright-report/
           retention-days: 30
+
+      #
+      # Trivy security scan
+      #
 
       - name: "pull_request|schedule: resolve target if Trivy scan should run"
         id: resolve-target
