--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -151,6 +151,7 @@ jobs:
           IMAGE_TAG="${SANITIZED_REF_NAME}_${{ github.sha }}"
 
           echo "IMAGE_TAG=${IMAGE_TAG}" >> "$GITHUB_OUTPUT"
+          echo "OUTPUT_IMAGE=${{ env.IMAGE_REGISTRY}}:${{ inputs.target }}-${IMAGE_TAG}" >> "$GITHUB_OUTPUT"
 
       #
       # Image build
@@ -358,7 +359,7 @@ jobs:
               TARGET="$FS_SCAN_FOLDER"
               TYPE="fs"
             else
-              TARGET="localhost:5000/workbench-images:${{ inputs.target }}-${{ github.sha }}"
+              TARGET="${OUTPUT_IMAGE}"
               TYPE="image"
             fi
           elif [[ "$EVENT_NAME" == "schedule" ]]; then
@@ -366,7 +367,7 @@ jobs:
               TARGET="$FS_SCAN_FOLDER"
               TYPE="fs"
             else
-              TARGET="ghcr.io/${{ github.repository }}/workbench-images:${{ inputs.target }}-${{ github.ref_name }}_${{ github.sha }}"
+              TARGET="${OUTPUT_IMAGE}"
               TYPE="image"
             fi
           fi
