--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -140,6 +140,7 @@ jobs:
 
           # quick check podman works
           podman ps
+
       - name: Show error logs (on failure)
         if: ${{ failure() }}
         run: journalctl -xe
@@ -359,7 +360,7 @@ jobs:
               TARGET="$FS_SCAN_FOLDER"
               TYPE="fs"
             else
-              TARGET="${OUTPUT_IMAGE}"
+              TARGET="${{ steps.calculated_vars.outputs.OUTPUT_IMAGE }}"
               TYPE="image"
             fi
           elif [[ "$EVENT_NAME" == "schedule" ]]; then
@@ -367,7 +368,7 @@ jobs:
               TARGET="$FS_SCAN_FOLDER"
               TYPE="fs"
             else
-              TARGET="${OUTPUT_IMAGE}"
+              TARGET="${{ steps.calculated_vars.outputs.OUTPUT_IMAGE }}"
               TYPE="image"
             fi
           fi
