--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -195,7 +195,7 @@ jobs:
         run: |
           set -Eeuxo pipefail
 
-          find . -name "statefulset.yaml" -type f -exec \
+          find . -name "statefulset.yaml" -or -name "pod.yaml" -type f -exec \
             sed -i'' 's/imagePullPolicy: Always/imagePullPolicy: IfNotPresent/g' {} \;
           git diff
 
