--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -30,6 +30,7 @@ jobs:
       IMAGE_REGISTRY: "ghcr.io/${{ github.repository }}/workbench-images"
       # GitHub image registry used for storing $(CONTAINER_ENGINE)'s cache
       CACHE: "ghcr.io/${{ github.repository }}/workbench-images/build-cache"
+      TRIVY_VERSION: 0.57.1
       # Targets (and their folder) that should be scanned using FS instead of IMAGE scan due to resource constraints
       TRIVY_SCAN_FS_JSON: '{}'
 
@@ -160,7 +161,15 @@ jobs:
 
       - name: Pre-pull Trivy vulnerabilities DB
         if: ${{ contains(fromJson(inputs.github).event.pull_request.labels.*.name, 'trivy-scan') }}
-        run: podman pull ghcr.io/aquasecurity/trivy-db
+        run: |
+          mkdir trivy
+          podman run --rm \
+            --env PODMAN_SOCK \
+            -v ${PWD}/trivy:/cache \
+            docker.io/aquasec/trivy:$TRIVY_VERSION \
+              image
+              --cache-dir /cache \
+              --download-db-only
 
       # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#push
       - name: "push|schedule: make ${{ inputs.target }}"
@@ -414,7 +423,6 @@ jobs:
       - name: Run Trivy vulnerability scanner
         if: ${{ steps.resolve-target.outputs.target }}
         run: |
-          TRIVY_VERSION=0.57.1
           REPORT_FOLDER=${{ github.workspace }}/report
           REPORT_FILE=trivy-report.md
           REPORT_TEMPLATE=trivy-markdown.tpl
@@ -440,9 +448,11 @@ jobs:
           podman run --rm \
               $PODMAN_ARGS \
               -v ${REPORT_FOLDER}:/report \
+              -v trivy/:/cache \
               docker.io/aquasec/trivy:$TRIVY_VERSION \
                 $SCAN_TYPE \
                 $SCAN_ARGS \
+                --cache-dir /cache \
                 --skip-db-update \
                 --scanners vuln --ignore-unfixed \
                 --exit-code 0 --timeout 30m \
