--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -337,9 +337,9 @@ jobs:
             --env "CI=true" \
             --env "NPM_CONFIG_fund=false" \
             --env "DEBUG=testcontainers:*" \
-            --env "PODMAN_SOCK=/var/run/docker.sock" \
+            --env "PODMAN_SOCK=unix://${PODMAN_SOCK}" \
             --env "TEST_TARGET" \
-            --volume ${PODMAN_SOCK}:/var/run/docker.sock \
+            --volume ${PODMAN_SOCK}:${PODMAN_SOCK} \
             --volume ${PWD}:/mnt \
             --volume /mnt/node_modules \
             mcr.microsoft.com/playwright:v1.48.1-noble \
