--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -205,8 +205,8 @@ jobs:
       - name: "Fixup paths that prevent us from running rocm tests"
         run: |
           mkdir -p runtimes/rocm
-          ln -s runtimes/rocm-tensorflow runtimes/rocm/tensorflow
-          ln -s runtimes/rocm-pytorch runtimes/rocm/pytorch
+          ln -s ../rocm-tensorflow runtimes/rocm/tensorflow
+          ln -s ../rocm-pytorch runtimes/rocm/pytorch
 
       # https://cri-o.io/
       - name: Install cri-o
