--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -253,8 +253,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y cri-o kubelet kubeadm kubectl
 
+          # meke use of /etc/cni/net.d/11-crio-ipv4-bridge.conflist so we don't
+          # need a pod network and just use the default bridge
+
           sudo cp ci/cached-builds/crio.conf /etc/crio/crio.conf.d/
-          sudo rm -rf /etc/cni/net.d/11-crio-ipv4-bridge.conflist
 
           sudo systemctl start crio.service
         env:
@@ -307,22 +309,18 @@ jobs:
         if: ${{ steps.have-tests.outputs.tests == 'true'  }}
         run: kubectl taint nodes --all node-role.kubernetes.io/control-plane-
 
-      - name: Install pod network
-        if: ${{ steps.have-tests.outputs.tests == 'true'  }}
-        run: kubectl apply -f https://github.com/flannel-io/flannel/releases/download/$FLANNEL_VERSION/kube-flannel.yml
-        env:
-          FLANNEL_VERSION: v0.26.1
-
-      - name: Wait for pods to be running
-        if: ${{ steps.have-tests.outputs.tests == 'true'  }}
-        run: |
-          kubectl wait pods --all --all-namespaces --for=condition=Ready --timeout=100s
-
       - name: Show nodes status and wait for readiness
         if: ${{ steps.have-tests.outputs.tests == 'true'  }}
         run: |
           kubectl describe nodes
           kubectl wait --for=condition=Ready nodes --all --timeout=100s || (kubectl describe nodes && false)
+
+      - name: Wait for pods to be running
+        if: ${{ steps.have-tests.outputs.tests == 'true'  }}
+        run: |
+          set -Eeuxo pipefail
+          kubectl wait deployments --all --all-namespaces --for=condition=Available --timeout=100s
+          kubectl wait pods --all --all-namespaces --for=condition=Ready --timeout=100s
 
       - name: "Run image tests"
         if: ${{ steps.have-tests.outputs.tests == 'true'  }}
