--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -341,6 +341,17 @@ jobs:
           kubectl wait deployments --all --all-namespaces --for=condition=Available --timeout=100s
           kubectl wait pods --all --all-namespaces --for=condition=Ready --timeout=100s
 
+      - name: "Debug DNS"
+        run: |
+          set -Eeuxo pipefail
+
+          kubectl logs --namespace=kube-system deployment/coredns
+          kubectl get --namespace=kube-system configmap/coredns -o yaml
+          #kubectl -n kube-system rollout restart deployment coredns
+          #kubectl -n kube-system edit configmaps coredns -o yaml
+          #firewall-cmd --add-masquerade --permanent
+          #firewall-cmd --reload
+
       - name: "Run image tests"
         if: ${{ steps.have-tests.outputs.tests == 'true'  }}
         run: python3 ci/cached-builds/make_test.py --target ${{ inputs.target }}
