--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -346,6 +346,7 @@ jobs:
         run: |
           set -Eeuxo pipefail
 
+          sleep 15
           kubectl logs --namespace=kube-system deployment/coredns
           kubectl get --namespace=kube-system configmap/coredns -o yaml
           
