--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -307,6 +307,7 @@ jobs:
           sudo sysctl -w net.bridge.bridge-nf-call-ip6tables=1
           sudo sysctl -w net.ipv4.ip_forward=1
 
+          # well, yeah, but it works!
           sudo ufw disable
 
           # https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm
@@ -351,17 +352,17 @@ jobs:
         run: |
           set -Eeuxo pipefail
 
-          sleep 15
+          #sleep 15
           kubectl logs --namespace=kube-system deployment/coredns
           kubectl get --namespace=kube-system configmap/coredns -o yaml
 
-          cat /run/systemd/resolve/resolv.conf
-          cat /var/lib/kubelet/kubeadm-flags.env
-          cat /var/lib/kubelet/config.yaml
+          #cat /run/systemd/resolve/resolv.conf
+          #cat /var/lib/kubelet/kubeadm-flags.env
+          #cat /var/lib/kubelet/config.yaml
           #kubectl -n kube-system rollout restart deployment coredns
           #kubectl -n kube-system edit configmaps coredns -o yaml
-          sudo firewall-cmd --add-masquerade --permanent
-          sudo firewall-cmd --reload
+          #sudo firewall-cmd --add-masquerade --permanent
+          #sudo firewall-cmd --reload
 
       - name: "Run image tests"
         if: ${{ steps.have-tests.outputs.tests == 'true'  }}
