show ufw defaults

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -295,6 +295,11 @@ jobs:
         if: ${{ steps.have-tests.outputs.tests == 'true'  }}
         run: sudo crictl images
 
+      - name: ufw status
+        run: |
+          sudo ufw status
+          sudo ufw status verbose
+
       - name: Install Kubernetes cluster
         if: ${{ steps.have-tests.outputs.tests == 'true'  }}
         run: |
