finalize the dns stuff

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -232,17 +232,6 @@ jobs:
           ln -s ../rocm-tensorflow runtimes/rocm/tensorflow
           ln -s ../rocm-pytorch runtimes/rocm/pytorch
 
-      - name: Set public DNS
-        if: ${{ steps.have-tests.outputs.tests == 'true' }}
-        run: |
-          set -Eeuxo pipefail
-
-          cat /etc/resolv.conf
-
-          sudo cp ci/cached-builds/resolv.conf /etc/resolv.conf
-          nslookup github.com
-          nslookup raw.githubusercontent.com
-
       # https://cri-o.io/
       - name: Install cri-o
         if: ${{ steps.have-tests.outputs.tests == 'true' }}
@@ -302,9 +291,16 @@ jobs:
 
           sudo swapoff -a
           sudo modprobe br_netfilter
-          # https://github.com/kubernetes/kubernetes/blob/e4c1f980b76fecece30c2f77885a7117192170a6/CHANGELOG/CHANGELOG-1.30.md?plain=1#L1454
+
+          # Was getting strange DNS resolution errors from pods that don't seem to want to go away sometimes:
+          #  Resolving raw.githubusercontent.com (raw.githubusercontent.com)... failed: Name or service not known.
+          #  wget: unable to resolve host address ‘raw.githubusercontent.com’
+          # Here's what helped:
+          #  https://kubernetes.io/docs/tasks/administer-cluster/dns-debugging-resolution/#known-issues
+          #  https://github.com/kubernetes/kubernetes/blob/e4c1f980b76fecece30c2f77885a7117192170a6/CHANGELOG/CHANGELOG-1.30.md?plain=1#L1454
           sudo sysctl -w net.bridge.bridge-nf-call-iptables=1
           sudo sysctl -w net.bridge.bridge-nf-call-ip6tables=1
+
           sudo sysctl -w net.ipv4.ip_forward=1
 
           # https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm
